Fixed background image and title overlap.

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,21 @@
 body {
     font-family: 'Noto Serif JP', sans-serif;
-    /* background-image: url("../images/peyto-home.jpg"); */
     
+}
+section {
+    padding: 350px 0;
 }
 
 #home {
-    
+   background-image: url("../images/peyto-home.JPG");
+   background-size: cover;
+   background-position: no-repeat;
+   color: white;
+   font-size: 1.5rem;
 }
 
-img {
-    max-width: 100%;
-    display: flex;
+h5 {
+    font-size: 3rem;
+    color: white;
+    font-style: bold;
 }
